fix: add overflow-x: hidden for wrapper

--- a/src/sass/components/_contact-us__selected.scss
+++ b/src/sass/components/_contact-us__selected.scss
@@ -54,7 +54,7 @@
         @include flex (flex);
         padding: 15px 35px 0px 37px;
         letter-spacing: 0.05em;
-        z-index: 0;
+        z-index: 1;
     }
 
     &._hidden {
@@ -121,6 +121,7 @@
     .btn__city__bar {
         width: 80%;
         margin-left: 40px;
+        padding: 0 10px;
 
         &._active {
             width: 80%;
